service.yaml
kind: Service 
apiVersion: v1 
metadata: 
  name: waft 
spec: 
  selector: 
    app: waft 
  ports: 
  - protocol: TCP 
    port: 3000 
    targetPort:3000
