waft.yaml
apiVersion: v1
kind: Service
metadata:
  name: waaft-service
spec:
  selector:
    app: waaft
 
    
  ports:
    - name: https
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: 35.224.50.168
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waaft-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waaft
  template:
    metadata:
      labels:
        app: waaft
    spec:
      containers:
        - name: waaft
          image: waaft/waaft:1.0.0
          ports:
            - containerPort: 3000
          resources: 
          limits: 
            cpu: 250m 
            memory: 32Mi  
          imagePullPolicy: Always
