my-mc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: waft-ingress
spec:
  tls:
  - secretName: first-secret-name
  rules:
  - host: 35.224.50.168
    http:
      paths:
      - backend:
          serviceName: waft-service
          servicePort: 3000
