waft-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: waft
  annotations:
    kubernetes.io/ingress.global-static-ip-name: waft-container
  labels:
    app: waft
spec:
  backend:
    serviceName: waft-service
    servicePort: 3000
